--- a/Auto Care/Base.lproj/LaunchScreen.storyboard
+++ b/Auto Care/Base.lproj/LaunchScreen.storyboard
@@ -3,6 +3,7 @@
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -27,7 +28,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your car's health Matters" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6r5-gE-GdY">
                                 <rect key="frame" x="20" y="588.66666666666663" width="335" height="24"/>
                                 <fontDescription key="fontDescription" type="system" weight="thin" pointSize="20"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" name="Primary Color Auto Care"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -54,5 +55,8 @@
     </scenes>
     <resources>
         <image name="Auto Care" width="300" height="300"/>
+        <namedColor name="Primary Color Auto Care">
+            <color red="0.20000000000000001" green="0.20000000000000001" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
